fix button alignment in Portfolio section

--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -20,6 +20,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    align-self: center;
 }
 
 nav {
@@ -32,7 +33,7 @@ nav {
 .tabs {
     width: 75%;
     display: flex;
-    font-size: 3em;
+    font-size: 2em;
     justify-content: space-evenly;
     padding: 0px 100px;
     /* justify-content: flex-start; */
@@ -69,7 +70,7 @@ nav {
     /* align-content: center; */
     /* justify-content: center; */
     padding: 100px;
-    height: 75vh;
+    height: 100vh;
     background-color: gray;
     text-align: center;
 }
@@ -87,12 +88,12 @@ nav {
 
 .project-item {
     margin: 0px 10px;
-    height: 500px;
-    width: 500px;
+    height: 300px;
+    width: 300px;
 }
 
 .project-item img {
-    height: 100%;
+    height: 50%;
 }
 
 .contact {
@@ -110,11 +111,11 @@ footer {
 }
 
 h1 {
-    font-size: 9em;
+    font-size: 8em;
 }
 
 h2 {
-    font-size: 5em;
+    font-size: 3em;
 }
 
 
